--- a/aic/field-values.html
+++ b/aic/field-values.html
@@ -26,37 +26,22 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../getting-started.html">Getting Started</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Features
-                      </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="../features.html">Overview</a>
-                            <a class="dropdown-item" href="../features.html#bugfixes">Bugfixes</a>
-                            <a class="dropdown-item" href="../features.html#ailords">AI Lord Behaviour</a>
-                            <a class="dropdown-item" href="../features.html#units">Unit Modifications</a>
-                            <a class="dropdown-item" href="../features.html#misc">Misc. Changes</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../features.html">Features</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         AI Character Introduction
                       </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Overview</a>
+                            <a class="dropdown-item" href="overview.html">Overview</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="detailed.html">AI Personality Values</a>
+                            <a class="dropdown-item" href="#">AIC Field Values</a>
                         </div>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          AI Castle Introduction
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="../aiv/overview.html">Overview</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="../aiv/detailed.html">AIV Editor</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../aiv.html">AI Castle Introduction</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../contributing.html">Contributing</a>
@@ -85,7 +70,27 @@
                 <h5 id="Unit">Unit</h5>
                 <hr class="contributing-step-divider">
                 <div class="card-body contributing-step-body">
-                    Unit
+                    <ul>
+                        <li>None</li>
+                        <li>Tunneler</li>
+                        <li>EuropArcher</li>
+                        <li>Crossbowman</li>
+                        <li>Spearman</li>
+                        <li>Pikeman</li>
+                        <li>Maceman</li>
+                        <li>Swordsman</li>
+                        <li>Knight</li>
+                        <li>Ladderman</li>
+                        <li>Engineer</li>
+                        <li>Monk</li>
+                        <li>ArabArcher</li>
+                        <li>Slave</li>
+                        <li>Slinger</li>
+                        <li>Assassin</li>
+                        <li>HorseArcher</li>
+                        <li>ArabSwordsman</li>
+                        <li>FireThrower</li>
+                    </ul>
                 </div>
             </div>
 
@@ -93,7 +98,29 @@
                 <h5 id="Resource">Resource</h5>
                 <hr class="contributing-step-divider">
                 <div class="card-body contributing-step-body">
-                    Resource
+                    <ul>
+                        <li>None</li>
+                        <li>Wood</li>
+                        <li>Hop</li>
+                        <li>Stone</li>
+                        <li>Iron</li>
+                        <li>Pitch</li>
+                        <li>Wheat</li>
+                        <li>Bread</li>
+                        <li>Cheese</li>
+                        <li>Meat</li>
+                        <li>Apples</li>
+                        <li>Beer</li>
+                        <li>Flour</li>
+                        <li>Bows</li>
+                        <li>Crossbows</li>
+                        <li>Spears</li>
+                        <li>Pikes</li>
+                        <li>Maces</li>
+                        <li>Swords</li>
+                        <li>LeatherArmors</li>
+                        <li>IronArmors</li>
+                    </ul>
                 </div>
             </div>
 
@@ -101,7 +128,13 @@
                 <h5 id="FarmBuilding">FarmBuilding</h5>
                 <hr class="contributing-step-divider">
                 <div class="card-body contributing-step-body">
-                    FarmBuilding
+                    <ul>
+                        <li>None</li>
+                        <li>WheatFarm</li>
+                        <li>HopFarm</li>
+                        <li>AppleFarm</li>
+                        <li>DairyFarm</li>
+                    </ul>
                 </div>
             </div>
 
@@ -109,7 +142,18 @@
                 <h5 id="SiegeEngine">SiegeEngine</h5>
                 <hr class="contributing-step-divider">
                 <div class="card-body contributing-step-body">
-                    SiegeEngine
+                    <ul>
+                        <li>None</li>
+                        <li>Catapult</li>
+                        <li>Trebuchet</li>
+                        <li>Mangonel</li>
+                        <li>Tent</li>
+                        <li>SiegeTower</li>
+                        <li>BatteringRam</li>
+                        <li>Shield</li>
+                        <li>TowerBallista</li>
+                        <li>FireBallista</li>
+                    </ul>
                 </div>
             </div>
 
@@ -117,7 +161,11 @@
                 <h5 id="HarassingSiegeEngine">HarassingSiegeEngine</h5>
                 <hr class="contributing-step-divider">
                 <div class="card-body contributing-step-body">
-                    HarassingSiegeEngine
+                    <ul>
+                        <li>None</li>
+                        <li>Catapult</li>
+                        <li>FireBallista</li>
+                    </ul>
                 </div>
             </div>
 
@@ -125,7 +173,15 @@
                 <h5 id="DiggingUnit">DiggingUnit</h5>
                 <hr class="contributing-step-divider">
                 <div class="card-body contributing-step-body">
-                    DiggingUnit
+                    <ul>
+                        <li>None</li>
+                        <li>EuropArcher</li>
+                        <li>Spearman</li>
+                        <li>Pikeman</li>
+                        <li>Maceman</li>
+                        <li>Engineer</li>
+                        <li>Slave</li>
+                    </ul>
                 </div>
             </div>
 
