--- a/faq.html
+++ b/faq.html
@@ -20,22 +20,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="getting-started.html">Getting Started</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Features
-                      </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="features.html">Overview</a>
-                            <a class="dropdown-item" href="features.html#bugfixes">Bugfixes</a>
-                            <a class="dropdown-item" href="features.html#ailords">AI Lord Behaviour</a>
-                            <a class="dropdown-item" href="features.html#units">Unit Modifications</a>
-                            <a class="dropdown-item" href="features.html#misc">Misc. Changes</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="features.html">Features</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -45,23 +36,17 @@
                             <a class="dropdown-item" href="aic/overview.html">Overview</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="aic/detailed.html">AI Personality Values</a>
+                            <a class="dropdown-item" href="aic/field-values.html">AIC Field Values</a>
                         </div>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          AI Castle Introduction
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="aiv/overview.html">Overview</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="aiv/detailed.html">AIV Editor</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="aiv.html">AI Castle Introduction</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contributing.html">Contributing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">FAQ</a>
+                        <a class="nav-link" href="#">FAQ <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
@@ -81,7 +66,8 @@
             <h5>Does this work in multiplayer?</h5>
             <hr class="faq-question-divider">
             <div class="card-body faq-question-body">
-                Yes, multiplayer works fine with the UCP installed as long as everyone playing has the same options selected.
+                Yes, multiplayer works fine with the UCP installed as long as everyone playing has the same options selected.<br>
+                However, certain features such as changing Player 1's color or Activate Spectator Mode will cause crash or desync in multiplayer!
             </div>
           </div>
 
@@ -137,7 +123,7 @@
                 <br><br>
                 English:
                 <br>
-                <b>SHC AI character design basics with UCP (ft wolfkiller rat)</b>
+                <b>SHC AI character design basics with UCP (ft wolfkiller rat)</b><br>
                 <iframe width="900" height="500" src="https://www.youtube.com/embed/8WgSMmWNzvQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
@@ -151,7 +137,7 @@
                 <br><br>
                 English:
                 <br>
-                <b>SHC AIV Editor setup, tips & tricks</b>
+                <b>SHC AIV Editor setup, tips & tricks</b><br>
                 <iframe width="900" height="500" src="https://www.youtube.com/embed/-sxW3BEAxW0?t=" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
