--- a/index.html
+++ b/index.html
@@ -25,17 +25,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="getting-started.html">Getting Started</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Features
-                      </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="features.html">Overview</a>
-                            <a class="dropdown-item" href="features.html#bugfixes">Bugfixes</a>
-                            <a class="dropdown-item" href="features.html#ailords">AI Lord Behaviour</a>
-                            <a class="dropdown-item" href="features.html#units">Unit Modifications</a>
-                            <a class="dropdown-item" href="features.html#misc">Misc. Changes</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="features.html">Features</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -45,17 +36,11 @@
                             <a class="dropdown-item" href="aic/overview.html">Overview</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="aic/detailed.html">AI Personality Values</a>
+                            <a class="dropdown-item" href="aic/field-values.html">AIC Field Values</a>
                         </div>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          AI Castle Introduction
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="aiv/overview.html">Overview</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="aiv/detailed.html">AIV Editor</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="aiv.html">AI Castle Introduction</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contributing.html">Contributing</a>
@@ -139,7 +124,7 @@
                     <div class="card feature">
                         <div class="card-header" id="feature-list-link">
                             <h5 class="mb-0">
-                                  <a class="btn btn-link collapsed" href="features.html"><i class="fas fa-star"></i>  View full descriptions of all features</a>
+                                  <a id="features-link" class="btn btn-link collapsed" href="features.html"><i class="fas fa-star"></i>  View full descriptions of all features</a>
                               </h5>
                         </div>
                     </div>
@@ -161,8 +146,15 @@
 
                 <br>
                 <br>
+                <h4>Multiplayer</h4>
+                Multiplayer works fine with the UCP installed as long as everyone playing has the same options selected.
+                However, having different features enabled, 
+                or specific features such as changing Player 1's color or Activate Spectator Mode will cause crash or desync in multiplayer!
+
+                <br>
+                <br>
                 <h4>Compatibility</h4> 
-                The patch should work for most Crusader versions, but the latest 1.41 HD version is recommended. 
+                The UnofficialCrusaderPatch should work for most Crusader versions, but the latest <a href="http://www.strongholdcrusaderhd.com/game.html">1.41 HD version</a> is recommended. 
                 If your version is not supported, which can happen if you install it from a CD for example, you should receive errors during the installation. 
                 To avoid this you can install FireFly's Crusader HD patch for free, which should support all of the unofficial changes.
 
