--- a/aic/overview.html
+++ b/aic/overview.html
@@ -21,42 +21,27 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../getting-started.html">Getting Started</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Features
-                      </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="../features.html">Overview</a>
-                            <a class="dropdown-item" href="../features.html#bugfixes">Bugfixes</a>
-                            <a class="dropdown-item" href="../features.html#ailords">AI Lord Behaviour</a>
-                            <a class="dropdown-item" href="../features.html#units">Unit Modifications</a>
-                            <a class="dropdown-item" href="../features.html#misc">Misc. Changes</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../features.html">Features</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         AI Character Introduction
                       </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Overview</a>
+                            <a class="dropdown-item" href="#">Overview <span class="sr-only">(current)</span></a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="detailed.html">AI Personality Values</a>
+                            <a class="dropdown-item" href="field-values.html">AIC Field Values</a>
                         </div>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          AI Castle Introduction
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="../aiv/overview.html">Overview</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="../aiv/detailed.html">AIV Editor</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../aiv.html">AI Castle Introduction</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../contributing.html">Contributing</a>
@@ -82,7 +67,7 @@
         <div id="feature-content">
 
             <div class="card contributing-step">
-                <h5>Where do i begin?</h5>
+                <h5>Where do I begin?</h5>
                 <hr class="contributing-step-divider">
                 <div class="card-body contributing-step-body">
                     With the Unofficial Crusader Patch, the entrails of the AI’s have been made accessible to you. 
